--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,15 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "agent-memfas"
-version = "0.1.0"
-description = "Memory Fast and Slow for AI Agents - dual-store memory with keyword triggers and FTS5 search"
+version = "0.2.0"
+description = "Memory Fast and Slow for AI Agents - dual-store memory with keyword triggers and pluggable search"
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.10"
 authors = [
     {name = "Tian Wang"},
 ]
-keywords = ["ai", "agent", "memory", "llm", "rag"]
+keywords = ["ai", "agent", "memory", "llm", "rag", "embeddings", "fts5"]
 classifiers = [
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
@@ -28,7 +28,24 @@ dependencies = []
 
 [project.optional-dependencies]
 yaml = ["pyyaml>=6.0"]
-dev = ["pytest>=7.0", "pyyaml>=6.0"]
+embeddings = [
+    "fastembed>=0.2.0",
+    "sqlite-vec>=0.1.0",
+]
+ollama = [
+    "requests>=2.28.0",
+    "sqlite-vec>=0.1.0",
+]
+all = [
+    "pyyaml>=6.0",
+    "fastembed>=0.2.0",
+    "sqlite-vec>=0.1.0",
+    "requests>=2.28.0",
+]
+dev = [
+    "pytest>=7.0",
+    "pyyaml>=6.0",
+]
 
 [project.scripts]
 memfas = "agent_memfas.cli:main"
