feat: v3 dynamic context engineering
Core components:
- TopicDetector: Detect conversation topics via embeddings
- RelevanceScorer: Multi-factor scoring (semantic, recency, access, topic)
- TokenBudget: Fill fixed budget with top memories (uses tiktoken)
- SessionState: Track topics, entities, memory access patterns
- TelemetryLogger: JSONL logging with summary stats

Main entry point:
- ContextCurator: Combines all components for easy integration
- get_context() returns curated context + metrics
- Embedding cache for 296x speedup on warm calls

CLI commands:
- memfas curate <query>: Get curated context
- memfas telemetry summary: View performance stats
- memfas telemetry show: View recent entries

Telemetry tracks:
- baseline_tokens vs curated_tokens (compression)
- memories scored/included/dropped
- topic detection and shifts
- latency per turn

Install: pip install agent-memfas[v3]

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "agent-memfas"
-version = "0.2.0"
+version = "0.3.0"
 description = "Memory Fast and Slow for AI Agents - dual-store memory with keyword triggers and pluggable search"
 readme = "README.md"
 license = {text = "MIT"}
@@ -27,7 +27,6 @@ classifiers = [
 dependencies = []
 
 [project.optional-dependencies]
-yaml = ["pyyaml>=6.0"]
 embeddings = [
     "fastembed>=0.2.0",
     "sqlite-vec>=0.1.0",
@@ -36,15 +35,22 @@ ollama = [
     "requests>=2.28.0",
     "sqlite-vec>=0.1.0",
 ]
+v3 = [
+    "tiktoken>=0.5.0",
+    "fastembed>=0.2.0",
+    "sqlite-vec>=0.1.0",
+]
 all = [
     "pyyaml>=6.0",
     "fastembed>=0.2.0",
     "sqlite-vec>=0.1.0",
     "requests>=2.28.0",
+    "tiktoken>=0.5.0",
 ]
 dev = [
     "pytest>=7.0",
     "pyyaml>=6.0",
+    "tiktoken>=0.5.0",
 ]
 
 [project.scripts]
