feat(context): v4 context management module
- Aggressive compaction at 50% context
- Relevance-based adaptive dropping
- Cold storage for recoverable chunks
- Full logging for observability
- Framework-agnostic API for any agent

See docs/context-management-plan.md for full design.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,9 @@ dev = [
     "pyyaml>=6.0",
     "tiktoken>=0.5.0",
 ]
+context = [
+    "pyyaml>=6.0",
+]
 
 [project.scripts]
 memfas = "agent_memfas.cli:main"
